objects/ltngMap__Map_Error__c.object
<CustomObject>
    <fields>
        <fullName>ltngMap__Exception_Message__c</fullName>
        <description>If any exception was thrown during the Apex execution to show this component, the message is shown here</description>
        <inlineHelpText>If any exception was thrown during the Apex execution to show this component, the message is shown here</inlineHelpText>
        <label>Exception Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ltngMap__Exception_Type__c</fullName>
        <description>Shows the type of exception thrown when executing the Apex controller associated with the recordMap component, if any.</description>
        <inlineHelpText>If any exception was thrown in Apex during the course of this execution, the type of exception thrown is shown here</inlineHelpText>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltngMap__Inaccessible_Fields__c</fullName>
        <description>This field is populated when an error occurs within the recordMap mapping component. The field displays the fields which this user had no access to. Questions? Tweet @SFMichaelHolt</description>
        <inlineHelpText>Shows the fields the user had no access to when attempting to view the recordMap component</inlineHelpText>
        <label>Inaccessible Fields</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ltngMap__Mapping_Query__c</fullName>
        <description>This field is populated when an error occurs within the recordMap mapping component. The field displays the Apex query which was attempted, to retrieve the address field values. Questions? Tweet @SFMichaelHolt</description>
        <inlineHelpText>Shows the attempted Apex query when a user loads the recordMap component</inlineHelpText>
        <label>Mapping Query</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ltngMap__Object_Name__c</fullName>
        <description>The name of the object on which this error occurred</description>
        <inlineHelpText>The name of the object on which this error occurred</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltngMap__Record_ID__c</fullName>
        <description>The record on which the error occurred</description>
        <inlineHelpText>The record where this error occurred</inlineHelpText>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Map Error</label>
    <listViews>
        <fullName>ltngMap__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Map Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>